# SafePass

./: .gitignore  Cargo.toml  README.md  diesel.toml  run_with_env.sh  test_api.sh
migrations/: up.sql
src/: main.rs
src/config/: db.rs  jwt.rs  mod.rs
src/controllers/: mod.rs  password_controller.rs  user_controller.rs
src/middleware/: auth.rs
src/models/: mod.rs  password.rs  schema.rs  user.rs
src/routes/: mod.rs  password_routes.rs  user_routes.rs
src/services/: mod.rs
src/utils/: encryption.rs
