[package]
name = "safepass"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
actix-rt = "2.8.0"
jsonwebtoken = "8.3.0"
bcrypt = "0.14.0"
diesel = { version = "2.1.0", features = ["postgres", "r2d2", "chrono", "uuid"] }
dotenv = "0.15.0"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.96"
chrono = { version = "0.4.26", features = ["serde"] }
env_logger = "0.10.0"
log = "0.4.19"
uuid = { version = "1.3.3", features = ["v4", "serde"] }
aes = "0.8.2"
rand = "0.8.5"
block-modes = "0.9.0"
hex = "0.4.3"
config = "0.13.3"
rust-argon2 = "1.0.0"
actix-governor = "0.4.1"
actix-cors = "0.6.4"
futures = "0.3.28" 